<?xml version="1.0"?>
<package format="3">
  <name>policy_runtime</name>
  <version>0.1.0</version>
  <description>Mock VLA policy publisher for ROS2 control-learning exercises.</description>
  <maintainer email="maogao623@gmail.com">Maoxu Gao</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
